# AI-in-Bus-Club-Workshop-1

./: M2_CrewAI_Wiki.txt  M3_withWebsite.txt  README.md  app.py  pyproject.toml
