[tool.poetry]
name = "workshop-1"
version = "1.0.0"
description = "presented for the AI in Business Club"
authors = ["Matthew Mulderink"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
crewai = "^0.65.2"
flask = "^3.0.3"
openai = "^1.50.2"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"